Fix: Modslot and Element selection are aligned again

--- a/src/app/components/authenticated-v2/settings/desired-mod-limit-selection/slot-limitation-selection/slot-limitation-selection.component.scss
+++ b/src/app/components/authenticated-v2/settings/desired-mod-limit-selection/slot-limitation-selection/slot-limitation-selection.component.scss
@@ -64,7 +64,7 @@
   float: right;
   width: 140px;
   margin-right: 15px;
-  top: -25px;
+  top: -21px;
 
   .lock {
     position: absolute;
